--- a/form_exercise.html
+++ b/form_exercise.html
@@ -2,9 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
+    <title>Web_form</title>
 
+</head>
+<body style="background-color: lightgreen;">
+    <h1>Basic html test</h1>
+    <hr>
+    <h2>Also test the use of <em style="font-family: 'Apple Chancery';color: red;">github sourcetree</em> </h2>
+    <hr>
 </body>
 </html>
