Ul and Ol exercise
Exercise the use of order list and unorder list

--- a/form_exercise.html
+++ b/form_exercise.html
@@ -10,5 +10,24 @@
     <hr>
     <h2>Also test the use of <em style="font-family: 'Apple Chancery';color: red;">github sourcetree</em> </h2>
     <hr>
+
+    <h2>An Unordered HTML List</h2>
+
+    <ul>
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+    </ul>
+
+    <h2>An Ordered HTML List</h2>
+
+    <ol>
+        <li>Coffee</li>
+        <li>Tea</li>
+        <li>Milk</li>
+        <li>test_A</li>
+        <li style="font-family: 'Apple Chancery';color:red;background-color:yellow;">test_B</li>
+    </ol>
+
 </body>
 </html>
