--- a/form_exercise.html
+++ b/form_exercise.html
@@ -5,7 +5,7 @@
     <title>Web_form</title>
 
 </head>
-<body style="background-color: lightgreen;">
+<body style="background-image: url(background_1.jpg);">
     <h1>Basic html test</h1>
     <hr>
     <h2>Also test the use of <em style="font-family: 'Apple Chancery';color: red;">github sourcetree</em> </h2>
