--- a/form_exercise.html
+++ b/form_exercise.html
@@ -6,9 +6,13 @@
 
 </head>
 <body style="background-image: url(background_1.jpg);">
-    <h1>Basic html test</h1>
+    <h1 style="color:yellow;font-size:60px;font-family: 'Apple Chancery'">Registration form !</h1>
+    <p style="font-size: 30px;color:red">Please key in your information </p>
+    <p style="font-size: 30px;color:red">press <q><ins>REGISTER!</ins></q> to register your account</p>
     <hr>
-    <h2>Also test the use of <em style="font-family: 'Apple Chancery';color: red;">github sourcetree</em> </h2>
+    <a href="#Form" style="font-size: 30px;background-color: lightgreen" title="Jump to form">Here is our form</a>
+    <br><br>
+    <a href="#Member" style="font-size: 30px;background-color: lightgreen" title="Jump to Member">Check member who join us!</a>
     <hr>
 
     <h2>An Unordered HTML List</h2>
@@ -28,6 +32,7 @@
         <li>test_A</li>
         <li style="font-family: 'Apple Chancery';color:red;background-color:yellow;">test_B</li>
     </ol>
+
 
 </body>
 </html>
