--- a/Server/form_exercise.html
+++ b/Server/form_exercise.html
@@ -16,7 +16,7 @@
     <hr>
 
     <h1 id="Form" style="color: yellow;">Registration</h1>
-    <form action="php_test_1.php" method="post">
+    <form target="_blank" action="php_test_1.php" method="post">
         <p style="color: yellow">Username: <input type="text" name="username">  </p>
         <p style="color: yellow">Password:  <input type="password" name="password"></p>
         <p style="color: yellow">Birthday: <input type="date" name="birthday"> </p>
